cmake_minimum_required(VERSION 3.0.2)
project(ired_rviz)

find_package(catkin REQUIRED)

################################################
## Declare ROS messages, services and actions ##
################################################

################################################
## Declare ROS dynamic reconfigure parameters ##
################################################

###################################
## catkin specific configuration ##
###################################

###########
## Build ##
###########

#############
## Install ##
#############

#############
## Testing ##
#############
